# zipship

./: .dockerignore  .env.example  .env.test  .git-commit-msg.txt  .gitignore  .npmrc  .oxlintrc.json  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  TODO.md  drizzle.config.ts  package.json  pnpm-workspace.yaml  tsconfig.base.json  tsconfig.json  turbo.json  zipshipj技术架构文档.md  zipship产品设计文档.md  zipship测试规范与实施计划.md
.github/workflows/: ci.yml  release-images.yml  verify.yml
.impeccable/: design.json
.impeccable/critique/: 2026-07-06T07-09-10Z__packages-console-app.md
.impeccable/live/: config.json
apps/api/: Dockerfile  package.json
apps/desktop-shell/: README.md  eslint.config.mjs  index.html  package.json  tsconfig.json  vite.config.ts  vite.main.config.ts  vite.renderer.config.ts
apps/web-shell/: index.html  package.json  vite.config.ts
crates/zipship-access/: Cargo.toml
crates/zipship-access/src/: http.rs  http_policy.rs  lib.rs  release.rs  repository.rs
crates/zipship-access/src/tests/: http.rs  http_policy.rs  mod.rs  release.rs
crates/zipship-api/: Cargo.toml
crates/zipship-api/src/: anonymous.rs  audit.rs  auth.rs  deployments.rs  error.rs  invitations.rs  lib.rs  members.rs  projects.rs  recovery.rs  releases.rs  request.rs  tokens.rs  uploads.rs
crates/zipship-api/src/anonymous/: tests.rs
crates/zipship-api/src/request/: tests.rs
crates/zipship-api/src/tests/: auth.rs  harness.rs  health_contract.rs  members_invitations.rs  mod.rs  projects.rs  tokens.rs
crates/zipship-api/src/tests/harness/: health_contract.rs  release_operations.rs  repositories.rs
crates/zipship-api/src/tests/harness/repositories/: app.rs  auth.rs  members_invitations.rs  projects.rs  recovery.rs  release_operations.rs  tokens.rs  uploads.rs
crates/zipship-api/src/tests/harness/repositories/app/: health_contract.rs  uploads.rs
crates/zipship-api/src/uploads/: tests.rs
crates/zipship-artifact/: Cargo.toml
crates/zipship-artifact/src/: archive.rs  central_directory.rs  detect.rs  error.rs  jobs.rs  lib.rs  manifest.rs  model.rs  report.rs
crates/zipship-artifact/src/tests/: detection.rs  extraction.rs  format_security.rs  limits.rs  mod.rs  path_security.rs  root_detection.rs
crates/zipship-audit/: Cargo.toml
crates/zipship-audit/src/: lib.rs  tests.rs
crates/zipship-auth/: Cargo.toml
crates/zipship-auth/src/: identity.rs  lib.rs  password.rs  service.rs  tests.rs  token.rs
crates/zipship-auth/src/service/: error.rs  implementation.rs  mod.rs  model.rs  repository.rs  tests.rs
crates/zipship-config/: Cargo.toml
crates/zipship-deployments/: Cargo.toml
crates/zipship-deployments/src/: constants.rs  error.rs  lib.rs  model.rs  repository.rs  service.rs  tests.rs
crates/zipship-domain/: Cargo.toml
crates/zipship-invitations/: Cargo.toml
crates/zipship-jobs/: Cargo.toml
crates/zipship-jobs/src/: lib.rs  tests.rs
crates/zipship-mail/: Cargo.toml
crates/zipship-mail/src/: lib.rs  mailer.rs  repository.rs  tests.rs  worker.rs
crates/zipship-mail/tests/: smtp_mailpit.rs
crates/zipship-members/: Cargo.toml
crates/zipship-members/src/: error.rs  lib.rs  model.rs  policy.rs  repository.rs  service.rs  tests.rs
crates/zipship-postgres/: Cargo.toml
crates/zipship-postgres/migrations/: 0001_initial.sql  0002_project_constraints.sql  0003_upload_receive_leases.sql  0004_job_and_processing_invariants.sql  0005_deployment_invariants.sql  0006_invitations.sql  0007_password_recovery.sql  0008_api_tokens.sql
crates/zipship-postgres/src/: access.rs  artifact_jobs.rs  audit.rs  auth.rs  deployments.rs  invitations.rs  jobs.rs  lib.rs  mail.rs  members.rs  projects.rs  recovery.rs  releases.rs  tokens.rs  uploads.rs
crates/zipship-postgres/src/artifact_jobs/: row.rs  validation.rs
crates/zipship-postgres/src/artifact_jobs/validation/: tests.rs
crates/zipship-postgres/src/auth/: row.rs  tests.rs
crates/zipship-postgres/src/deployments/: row.rs
crates/zipship-postgres/src/invitations/: row.rs  support.rs  tests.rs
crates/zipship-postgres/src/jobs/: row.rs  tests.rs
crates/zipship-postgres/src/mail/: row.rs
crates/zipship-postgres/src/members/: row.rs  tests.rs
crates/zipship-postgres/src/projects/: row.rs  tests.rs
crates/zipship-postgres/src/recovery/: support.rs
crates/zipship-postgres/src/tokens/: row.rs  tests.rs
crates/zipship-postgres/src/uploads/: row.rs  tests.rs
crates/zipship-postgres/tests/: artifact_jobs_repository.rs  audit_repository.rs  auth_repository.rs  deployments_repository.rs  invitations_repository.rs  jobs_repository.rs  mail_outbox_repository.rs  members_repository.rs  previews_repository.rs  projects_repository.rs  recovery_repository.rs  releases_repository.rs  tokens_repository.rs  uploads_repository.rs
crates/zipship-projects/: Cargo.toml
crates/zipship-recovery/: Cargo.toml
crates/zipship-recovery/src/: constants.rs  envelope.rs  lib.rs  model.rs  policy.rs  repository.rs  service.rs  tests.rs
crates/zipship-releases/: Cargo.toml
crates/zipship-releases/src/: lib.rs  tests.rs
crates/zipship-storage/: Cargo.toml
crates/zipship-storage/src/: lib.rs  local.rs  model.rs  path.rs  tests.rs
crates/zipship-tokens/: Cargo.toml
crates/zipship-tokens/src/: constants.rs  credential.rs  error.rs  lib.rs  model.rs  repository.rs  service.rs  tests.rs
crates/zipship-uploads/: Cargo.toml
docs/: 01-产品设计.md  02-技术架构.md  03-测试规范与实施路线.md  04-TODO.md  05-当前状态与问题清单.md  06-Rust-第二阶段重构方案.md  DESIGN.md  PRODUCT.md
infra/docker/: Caddyfile  (+10 more)
scripts/: check-production-config.test.ts  check-production-config.ts  check-release-integrity.ts  check-rust-cutover.ts  create-test-db.ts  dev-desktop.ts  generate-api-client.ts  kill-port.ts  smoke-production.ts  test-rust-integration.ts
services/zipship-worker/: Cargo.toml
services/zipship-worker/src/: lib.rs  main.rs  tests.rs
services/zipship-worker/tests/: artifact_pipeline.rs
services/zipship-worker/tests/artifact_pipeline/: recovery.rs  support.rs
services/zipshipd/: Cargo.toml
services/zipshipd/src/: main.rs
tests/: README.md
(+181 files in other folders)
