[workspace]
resolver = "3"
members = [
  "crates/zipship-api",
  "crates/zipship-auth",
  "crates/zipship-config",
  "crates/zipship-domain",
  "crates/zipship-jobs",
  "crates/zipship-postgres",
  "crates/zipship-projects",
  "crates/zipship-storage",
  "services/zipshipd",
]
exclude = ["apps/desktop-shell/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
repository = "https://github.com/puzzle-fuzzy/zipship"

[workspace.dependencies]
argon2 = "0.5.3"
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["http1", "json", "macros", "tokio"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
clap = { version = "4.5.54", features = ["derive", "env"] }
dotenvy = "0.15.7"
email_address = "0.2.9"
getrandom = "0.4.3"
secrecy = "0.10.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
sha2 = "0.11.0"
sqlx = { version = "0.9.0", default-features = false, features = [
  "json",
  "macros",
  "migrate",
  "postgres",
  "runtime-tokio",
  "time",
  "tls-rustls-ring-webpki",
  "uuid",
] }
tempfile = "3.24.0"
thiserror = "2.0.18"
time = { version = "0.3.53", features = ["formatting", "parsing", "serde"] }
tokio = { version = "1.52.3", features = [
  "fs",
  "io-util",
  "macros",
  "net",
  "rt-multi-thread",
  "signal",
  "time",
] }
tower = { version = "0.5.3", features = ["util"] }
tower-http = { version = "0.7.0", features = [
  "catch-panic",
  "request-id",
  "sensitive-headers",
  "set-header",
  "timeout",
  "trace",
] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter", "json"] }
utoipa = { version = "5.5.0", features = ["axum_extras", "time", "uuid"] }
uuid = { version = "1.23.5", features = ["serde", "v4"] }
subtle = "2.6.1"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
dbg_macro = "deny"
todo = "deny"
unimplemented = "deny"
