[package]
name = "zipship-access"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
mime_guess.workspace = true
thiserror.workspace = true
tokio.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
uuid.workspace = true
zipship-artifact = { path = "../zipship-artifact" }
zipship-domain = { path = "../zipship-domain" }
zipship-storage = { path = "../zipship-storage" }

[dev-dependencies]
tempfile.workspace = true
tower.workspace = true

[lints]
workspace = true
