[package]
name = "zipship-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
secrecy.workspace = true
serde.workspace = true
time.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
zipship-auth = { path = "../zipship-auth" }
zipship-projects = { path = "../zipship-projects" }

[dev-dependencies]
serde_json.workspace = true
tokio.workspace = true
tower.workspace = true
zipship-domain = { path = "../zipship-domain" }

[lints]
workspace = true
