[package]
name = "zipship-api"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
axum-extra.workspace = true
futures-util.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
time.workspace = true
tokio-util.workspace = true
tower-http.workspace = true
tracing.workspace = true
utoipa.workspace = true
uuid.workspace = true
zipship-auth = { path = "../zipship-auth" }
zipship-artifact = { path = "../zipship-artifact" }
zipship-deployments = { path = "../zipship-deployments" }
zipship-domain = { path = "../zipship-domain" }
zipship-projects = { path = "../zipship-projects" }
zipship-releases = { path = "../zipship-releases" }
zipship-storage = { path = "../zipship-storage" }
zipship-uploads = { path = "../zipship-uploads" }

[dev-dependencies]
tokio.workspace = true
tower.workspace = true
tempfile.workspace = true

[lints]
workspace = true
