[package]
name = "zipship-artifact"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
time.workspace = true
unicode-normalization.workspace = true
uuid.workspace = true
zip.workspace = true
zipship-domain = { path = "../zipship-domain" }
zipship-jobs = { path = "../zipship-jobs" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
