[package]
name = "zipship-auth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
argon2.workspace = true
async-trait.workspace = true
base64.workspace = true
email_address.workspace = true
getrandom.workspace = true
secrecy.workspace = true
sha2.workspace = true
subtle.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints]
workspace = true
