[package]
name = "zipship-jobs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zipship-domain = { path = "../zipship-domain" }

[lints]
workspace = true
