[package]
name = "zipship-mail"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
lettre.workspace = true
secrecy.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
url.workspace = true
uuid.workspace = true
zipship-jobs = { path = "../zipship-jobs" }
zipship-recovery = { path = "../zipship-recovery" }

[dev-dependencies]
zipship-auth = { path = "../zipship-auth" }

[lints]
workspace = true
