[package]
name = "zipship-members"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zipship-domain = { path = "../zipship-domain" }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
