[package]
name = "zipship-postgres"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
secrecy.workspace = true
serde_json.workspace = true
sqlx.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zipship-auth = { path = "../zipship-auth" }
zipship-access = { path = "../zipship-access" }
zipship-artifact = { path = "../zipship-artifact" }
zipship-config = { path = "../zipship-config" }
zipship-domain = { path = "../zipship-domain" }
zipship-jobs = { path = "../zipship-jobs" }
zipship-projects = { path = "../zipship-projects" }
zipship-uploads = { path = "../zipship-uploads" }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
