[package]
name = "zipship-recovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
chacha20poly1305.workspace = true
getrandom.workspace = true
secrecy.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
time.workspace = true
tokio.workspace = true
uuid.workspace = true
zeroize.workspace = true
zipship-auth = { path = "../zipship-auth" }

[lints]
workspace = true
