[package]
name = "zipship-storage"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true
zipship-domain = { path = "../zipship-domain" }

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
