[package]
name = "zipship-tokens"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
secrecy.workspace = true
thiserror.workspace = true
time.workspace = true
uuid.workspace = true
zipship-auth = { path = "../zipship-auth" }

[dev-dependencies]
tokio.workspace = true

[lints]
workspace = true
