[package]
name = "zipshipd"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait.workspace = true
axum.workspace = true
clap.workspace = true
dotenvy.workspace = true
sqlx.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
zipship-api = { path = "../../crates/zipship-api" }
zipship-access = { path = "../../crates/zipship-access" }
zipship-auth = { path = "../../crates/zipship-auth" }
zipship-config = { path = "../../crates/zipship-config" }
zipship-deployments = { path = "../../crates/zipship-deployments" }
zipship-postgres = { path = "../../crates/zipship-postgres" }
zipship-projects = { path = "../../crates/zipship-projects" }
zipship-storage = { path = "../../crates/zipship-storage" }
zipship-uploads = { path = "../../crates/zipship-uploads" }

[lints]
workspace = true
